# zen3d

./: .bazelrc  BUILD  WORKSPACE  app.cpp  bindings.cpp  debug.py  func.h  imgui.ini  imgui_demo.cpp  main.cpp  readme.md  triangle_demo.cpp  triangle_demo_r.cpp  wasm.bzl  wasm_server.py
build_defs/: expand_template.bzl  wasm.bzl
data/: index.html
zen/: .clang-format
zen/core/base/: BUILD  camera.cc  camera.h  camera_test.cc  entity.cc  entity.h  entity_test.cc  geometry.h  geometry_test.cc  handle.h  logging.h  material.h  mesh_flat_material.cc  mesh_flat_material.h  model_loader_test.cc  resource_manager.h  resource_manager_test.cc  scene.cc  scene.h  scene_graph.cc  scene_graph.h  scene_graph_test.cc  (+12 more)
zen/demo/: BUILD  gltf_model_loader_demo.cc  gltf_model_loader_demo_wasm.cc  imgui_demo.cc  imgui_demo_wasm.cc  minimal_renderer_demo_wasm.cc  minimal_rendering_pipeline_demo_wasm.cc  model_loader_demo.cc  stb_test.cpp  test.cpp  vulkan_setup.cc
zen/libs/: BUILD  README.md  assimp_test.cc  assimp_test_wasm.cc  entt_test_wasm.cc  imgui_demo_wasm.cc  triangle_demo_wasm.cpp
zen/loader/: BUILD  texture_loader.cc  texture_loader.h
zen/ui/: CMakeLists.txt  context.cc  context.h  gui_manager.cc  gui_manager.h  gui_manager_test.cc  gui_store.h  gui_system.cc  gui_system.h  gui_system_test.cc  object_inspector.cc  object_inspector.h  scene_explorer.cc  scene_explorer.h  window.cc  window.h
zen/ui/imgui/: BUILD  gui.cc  gui.h  gui_store.h  gui_test.cc  object_inspector.cc  object_inspector.h  scene_explorer.cc  scene_explorer.h  utils.cc  utils.h  window.cc  window.h
(+96 files in other folders)
